# translation_api

./: .env  .gitignore  README.md  config.py  docker-compose.yml  main.py  models.py  nginx.conf  pyproject.toml  requirements.txt  setup.bat  setup.sh  utils.py
flask_api/: Dockerfile  README.md  app.py  config.py  database.py  extensions.py  models.py  pyproject.toml  requirements.txt  routes.py  schemas.py  setup_api.sh  translation_service.py
instance/: site.db
llm_service/: Dockerfile  llm_service.py  requirements.txt
